<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="-31dp"
        tools:layout_editor_absoluteY="0dp"
        android:paddingStart="80dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_le_miglia_da_convertire_in_chilometri"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/miglia_da_convertire_editText"

            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:autofillHints="Miglia"
            android:hint="@string/miglia"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:text=""
            tools:layout_editor_absoluteX="190dp"
            tools:layout_editor_absoluteY="160dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chilometri_corrispondenti"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/chilometri_corrispondenti_textView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:paddingLeft="50dp"
            android:text="@string/risultato"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="332dp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/converti_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:orientation="horizontal"
            android:text="@string/converti"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="449dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




